# Zenith_FW

./: CNAME  README.md
.github/: gen_yaml.py  main.yml.j2
.github/workflows/: main.yml  static.yml
fw/analog_lib/: CMakeLists.txt
fw/analog_lib/include/: linearize.h  notch_remap.h  snapback_filter.h  stick.h  stick_types.h
fw/analog_lib/src/: linearize.c  notch_remap.c  snapback_filter.c  stick.c
fw/include/: zenith.h  zenith_cfg_def.h
fw/include/zenith/: includes.h  settings.h  types.h
fw/include/zenith/comms/: comms.h  gamecube.h  n64.h
fw/include/zenith/drivers/: ads7142.h  lis3mdl.h
fw/include/zenith/input/: btn_remap.h  linearize.h  notch_remap.h  stick.h  stick_task.h
fw/include/zenith/usb/: usb.h  webusb.h
fw/lib/: CMakeLists.txt  git_version.cmake  settings.c  zenith.c
fw/lib/comms/: comms.c  gamecube.c  n64.c
fw/lib/drivers/: ads7142.c  lis3mdl.c
fw/lib/input/: btn_remap.c  calib.c  linearize.c  notch_remap.c  stick.c  stick_task.c
fw/lib/usb/: usb.c  webusb.c
include/zenith/: settings.h
include/zenith/drivers/: lis3mdl.h
include/zenith/input/: calib.h  notch_remap.h  stick.h
lib/: CMakeLists.txt  zenith.c
lib/drivers/: ads7142.c
lib/input/: calib.c  stick.c
lib/usb/: descriptors.c  webusb.c
web/: README.md
web/lib/modules/: cntlr.js  zenith_calib.js  zenith_input.js  zenith_notch.js
